--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -1,17 +1,22 @@
-<ul class="nav justify-content-end">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Alumni</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Success Stories</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Career Oportunities</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">News and Events</a>
-  </li>
-</ul>
+<div class="my-nav">
+  <div class="my-left"><h3 class="text-center">CodeFactory Alumni</h3></div>
+  <div class="my-right">
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Alumni</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Success Stories</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Career Oportunities</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">News and Events</a>
+      </li>
+    </ul>
+  </div>
+</div>
