color pallet basic styles for nav and footer

--- a/src/app/my-foot/my-foot.component.html
+++ b/src/app/my-foot/my-foot.component.html
@@ -1,1 +1,15 @@
-<p>my-foot works!</p>
+<div class="my-foot">
+  <div class="container">
+    <div class="social">
+      <h5>Follow Us</h5>
+      <div class="my-links">
+        <a href="">Facebook</a><a href="">Twitter</a><a href="">Youtube</a>
+      </div>
+    </div>
+    <hr />
+    <div class="info">
+      <div class="impressum"><h6>Impressum</h6></div>
+      <div class="final"><a href="">Link1</a><a href="">Link2</a></div>
+    </div>
+  </div>
+</div>
