--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+$main-bg-color:rgb(20, 14, 14);
+$letter-color:rgb(220, 208, 208);
+$sec-letter:rgb(104, 99, 99);
+$secondary-color:rgb(255, 98, 0);
