--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -1,17 +1,17 @@
 <ul class="nav justify-content-end">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
+    <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Alumni</a>
+    <a class="nav-link" routerLink="/alumni">Alumni</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Success Stories</a>
+    <a class="nav-link" routerLink="/stories">Success Stories</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Career Oportunities</a>
+    <a class="nav-link" routerLink="/career">Career Oportunities</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">News and Events</a>
+    <a class="nav-link" routerLink="/news">News and Events</a>
   </li>
 </ul>
