--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -3,7 +3,7 @@
   <div class="my-right">
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Alumni</a>
@@ -12,7 +12,7 @@
         <a class="nav-link" href="#">Success Stories</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Career Oportunities</a>
+        <a class="nav-link" routerLink="/career">Career Oportunities</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">News and Events</a>
