--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@ $main-bg-color:rgb(20, 14, 14);
 $letter-color:rgb(220, 208, 208);
 $sec-letter:rgb(104, 99, 99);
 $secondary-color:rgb(255, 98, 0);
+body {
+    background-color: $letter-color;
+}
