--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="container my-wrapper">
+  <div class="my-hero">
+    <div class="my-left">
+      <div class="test">
+        <div class="line">
+          <span class="hero_black item1">OUR</span>
+          <span class="hero_black item2">BIGGEST</span>
+        </div>
+        <div class="line">
+          <span class="hero_black item3">DISCOVERY</span>
+          <span class="hero_black item4">IS</span>
+        </div>
+        <div class="line"><span class="hero_orange item5">YOU</span></div>
+      </div>
+    </div>
+    <div class="my-right">
+      <img
+        src="https://images.pexels.com/photos/7943998/pexels-photo-7943998.jpeg?cs=srgb&dl=pexels-pavel-danilyuk-7943998.jpg&fm=jpg"
+        alt="Alumni Image"
+      />
+    </div>
+  </div>
+</div>
