--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,11 +1,16 @@
 @import '../../styles.scss';
 
+#upper{
+    border-bottom: solid 1px gray;
+    margin-top: 5px;
+}
 .my-hero{
     display: flex;
     justify-content: space-between;
     color: $letter-color;
     font-size: 2rem;
     font-weight: bold;
+    border: solid 1px gray;
     .hero_black{
         background-color: $main-bg-color;
     }
@@ -42,6 +47,30 @@
             max-width: 100%;
             max-height: 30rem;
             opacity: 0.6;
+        }
+    }
+}
+#middle_outer{
+    background-color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    .middle_inner{
+        display: flex;
+        justify-content: space-between;
+        #middle_left{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 60%;
+            a{
+                margin-left: 5px;
+                margin-right: 5px;
+            }
+        }
+        #middle_right{
+            width: 20%;
+            display: flex;
+            justify-content: space-between;
         }
     }
 }
